--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,4 +16,6 @@ spec:
                 - name: my-container
                   image: yusaku86/myexample
                   ports:
-                    -  containerPort: 80
+                  - containerPort: 80
+            imagePullSecrets:
+                - name: mysecret
